--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -46,7 +46,7 @@
   color: #fff;
 }
 /*----------awrapper------------*/
-.awrapper {
+/* .awrapper {
   background-image: url("../../../public/images/awrapper.webp");
   background-repeat: no-repeat;
   background-size: cover;
@@ -67,7 +67,7 @@
   font-size: 20px;
   font-weight: 500;
 }
-/*----------awrapper------------*/
+
 @media screen and (max-width: 768px) {
   .aboutHome .container {
     flex-direction: column-reverse;
@@ -77,5 +77,63 @@
   }
   .awrapper {
     height: 50vh;
+  }
+} */
+
+
+
+/*------------------------------*/
+/* AWRAPPER RESPONSIVE FIX      */
+/*------------------------------*/
+
+.awrapper {
+  background-image: url("../../../public/images/awrapper.webp");
+  background-size: cover;
+  background-position: center;
+  padding: 40px 0;
+  height: auto;        /* ❗ remove fixed height */
+  color: #fff;
+}
+
+.awrapper .box {
+  padding: 20px 0;
+  align-items: center;
+}
+
+.awrapper img {
+  width: 50px;
+  height: 50px;
+  margin-right: 15px;
+}
+
+/* text */
+.awrapper h1 {
+  font-size: 32px;
+}
+.awrapper h3 {
+  font-size: 16px;
+}
+
+/* MOBILE FIX */
+@media screen and (max-width: 768px) {
+  .awrapper {
+    padding: 20px 0;
+    text-align: center;
+  }
+
+  .awrapper .box {
+    flex-direction: column;
+    gap: 10px;
+  }
+
+  .awrapper img {
+    margin: 0;
+  }
+
+  .awrapper h1 {
+    font-size: 24px;
+  }
+  .awrapper h3 {
+    font-size: 14px;
   }
 }
