--- a/src/components/home/hero/Hero.css
+++ b/src/components/home/hero/Hero.css
@@ -14,6 +14,7 @@
 }
 .hero #heading h3 {
   color: #fff;
+  margin-bottom: -10px;
 }
 .hero #heading {
   text-align: left;
@@ -31,5 +32,6 @@
   }
   .hero .row {
     width: 100%;
+    margin-top: 10px;
   }
 }
